<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="532dp"
        android:layout_gravity="bottom"
        android:stretchColumns="1,2,3,4">


        <TableRow>

            <TextView
                android:id="@+id/calcText"
                style="@style/TextoPrincipal"
                android:layout_height="match_parent"
                android:layout_span="4"
                android:gravity="right"
                android:text="@string/TextoInicio"
                tools:ignore="RtlHardcoded" />
        </TableRow>


        <TableRow android:layout_height="73dp">

            <Button
                android:id="@+id/clearBtn"
                style="@style/LightGrayButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnClear"
                android:onClick="btnClearClick"/>

            <Button

                android:id="@+id/signBtn"
                style="@style/LightGrayButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnSign" />

            <Button
                android:id="@+id/percentBtn"
                style="@style/LightGrayButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnPercent"
                android:onClick="btnPercentClick"/>

            <Button
                android:id="@+id/divideBtn"
                style="@style/OrangeButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnDivide"
                android:onClick="btnDivideClick"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/sevenBtn"
                style="@style/GrayButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnSeven"
                android:onClick="btnSevenClick"/>

            <Button
                android:id="@+id/eightBtn"
                style="@style/GrayButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnEight"
                android:onClick="btnEightClick"/>

            <Button
                android:id="@+id/nineBtn"
                style="@style/GrayButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnNine"
                android:onClick="btnNineClick"/>

            <Button
                android:id="@+id/multiplyBtn"
                style="@style/OrangeButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnMultiply"
                android:onClick="btnMultiplyClick"/>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/fourBtn"
                style="@style/GrayButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnFour"
                android:onClick="btnFourClick"/>

            <Button
                android:id="@+id/fiveBtn"
                style="@style/GrayButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnFive"
                android:onClick="btnFiveClick"/>

            <Button
                android:id="@+id/sixBtn"
                style="@style/GrayButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnSix"
                android:onClick="btnSixClick"/>

            <Button
                android:id="@+id/minusBtn"
                style="@style/OrangeButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnMinus"
                android:onClick="btnMinusClick"/>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/oneBtn"
                style="@style/GrayButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnOne"
                android:onClick="btnOneClick"
                />
            />

            <Button
                android:id="@+id/twoBtn"
                style="@style/GrayButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnTwo"
                android:onClick="btnTwoClick"
                />

            <Button
                android:id="@+id/threeBtn"
                style="@style/GrayButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnThree"
                android:onClick="btnThreeClick"
                />

            <Button
                android:id="@+id/plusBtn"
                style="@style/OrangeButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnPlus"
                android:onClick="btnPlusClick"/>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/zeroBtn"
                style="@style/GrayButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="2"
                android:text="@string/BtnZero"
                android:onClick="btnZeroClick"/>

            <Button
                android:id="@+id/pointBtn"
                style="@style/GrayButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnPoint"
                android:onClick="btnPointClick"/>

            <Button
                android:id="@+id/equalBtn"
                style="@style/OrangeButtonBG"
                android:layout_height="90dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/BtnEqual"
                android:onClick="btnEqualClick"
                />

        </TableRow>

    </TableLayout>
</FrameLayout>